Allow setting the SOA TTL

--- a/test-root-config.template
+++ b/test-root-config.template
@@ -39,7 +39,11 @@
 #   Defaults to false
 #wrong-trust-anchor = false
 
-### The following two settings relate to the local environment on the system running this program
+# TTL for the SOAs, MINIMUM in the SOAs, and TTL for the RRSIGs
+#   Default is 86400
+#ttl-for-soa = 3600
+
+build_config_file# The following two settings relate to the local environment on the system running this program
 
 # Directory to build the new root into
 #   This option is required
